# GPR5300_GL

./: .gitmodules  CMakeLists.txt
cmake/: concat.cmake
data/models/granit01/: granit.mtl
data/models/rocks01/: rock_01.mtl
data/scenes/: water.json
data/sprites/: other_play.dds
data/terrain/: terrain_height.dds  terrain_height2048.dds  terrain_texture.dds  terrain_texture2048.dds  valley.tmd
include/: camera.h  engine.h  file_utility.h  geometry.h  geometry.h.bak  graphics.h  input.h  json_utility.h  light.h  math_utility.h  mesh.h  model.h  scene.h  vector.h
main/: 01_hello_triangle.cpp  02_hello_texture.cpp  03_hello_transform.cpp  04_hello_coords.cpp  05_hello_camera.cpp  06_hello_phong_light.cpp  07_hello_material.cpp  08_hello_lighting_maps.cpp  09_hello_light_casters.cpp  10_hello_model.cpp  11_hello_stencil.cpp  12_hello_outline.cpp  13_hello_blending.cpp  14_hello_culling.cpp  15_hello_post_processing.cpp  16_hello_cubemaps.cpp  17_hello_instancing.cpp  18_hello_normal.cpp  19_hello_engine.cpp  20_hello_blinn.cpp  20_hello_hdr.cpp  21_hello_shadow.cpp  22_hello_bloom.cpp  23_hello_deferred.cpp  24_hello_ssao.cpp  25_hello_pbr.cpp  26_hello_toon.cpp  27_hello_ibl.cpp  28_hello_threads.cpp  50_hello_parallax.cpp  51_hello_billboard.cpp  52_hello_particle.cpp  666_main_scene.cpp  98_hello_water.cpp  99_hello_terrain.cpp  __01_redo_to_5.cpp  __02_test_shader.cpp  hello_triangle_web.cpp
scenes/: 19_engine_scene.json  water.json
shaders/: texture_other_fragment.glsl
shaders/01_hello_triangle/: triangle.frag  triangle.vert
shaders/02_hello_texture/: texture.frag  texture.vert  texture_other.frag
shaders/03_hello_transform/: transform.frag  transform.vert
shaders/04_hello_coords/: coords.frag  coords.vert
shaders/05_hello_camera/: camera.frag  camera.vert
shaders/06_hello_phong_light/: lamp.frag  lamp.vert  light.frag
shaders/07_hello_material/: lamp.frag  material.frag  material.vert
shaders/08_hello_lighting_maps/: lamp.frag  lamp.vert  material.frag  material.vert
shaders/09_hello_light_casters/: material.vert  material_directional.frag  material_flashlight.frag  material_point.frag  material_spotlight.frag
shaders/10_hello_model/: model.frag  model.vert
shaders/11_hello_stencil/: cube.frag  cube.vert  floor.frag  floor.vert
shaders/12_hello_outline/: model.frag  model.vert  outline.frag  outline.vert
shaders/13_hello_blending/: full_transparent.frag  quad.frag  quad.vert
shaders/14_hello_culling/: cube.frag  cube.vert
shaders/15_hello_post_processing/: blur.frag  distance_fog.frag  edge_detection.frag  frame.frag  frame.vert  grayscale.frag  inversion.frag  kernel.frag
shaders/16_hello_cubemaps/: cubemaps.frag  cubemaps.vert  model_refl.frag  model_refl.vert  model_refr.frag  model_refr_asin.frag  model_refr_sqrt.frag
shaders/17_hello_instancing/: model_instancing.frag  model_instancing.vert  model_instancing_opti.frag  model_instancing_opti.vert
shaders/18_hello_normal/: bad_normal.frag  bad_normal.vert  normal.frag  normal.vert  without_normal.frag  without_normal.vert
shaders/20_hello_hdr/: hdr.frag  plane.frag  plane.vert
shaders/21_hello_shadow/: gamma.frag  gamma.vert  model.frag  model.vert
shaders/22_hello_bloom/: blur.frag  hdr.frag  light.frag  plane.frag
shaders/23_hello_deferred/: deferred.frag  lighting_pass.frag
shaders/24_hello_ssao/: lighting_pass.frag  lighting_pass.vert  ssao.frag  ssao.vert  ssao_basic.frag  ssao_basic.vert  ssao_blur.frag  ssao_pass.frag
shaders/25_hello_pbr/: pbr.frag  pbr_map.frag
shaders/26_hello_toon/: toon.frag  toon.vert
shaders/27_hello_ibl/: backkground.frag  brdf.vert  irradiance.frag  pbr.frag  pbr.vert  pbr_spec.frag  pre_filter.frag
shaders/50_hello_parallax/: normal.vert  occlusionParallax.frag  parallax.frag  parallax.vert  steepParallax.frag
shaders/51_hello_billboard/: billboard.frag  billboard.vert  full_transparent.frag  quad.frag  quad.vert
shaders/52_hello_particle/: billboard.vert  billboard_particle.vert  full_transparent.frag
shaders/666_main_scene/: blur.frag  firefly.frag  firefly.vert  hdr.frag  model_instanced.frag  model_instanced.vert  model_instancing.vert  model_shadow.frag  model_shadow.vert  skybox.frag  ssao_basic.frag  ssao_basic.vert  ssao_blur.frag  ssao_pass.frag  terrain.frag  terrain.vert
shaders/98_hello_water/: water_scene.frag  water_scene.vert
shaders/99_hello_terrain/: parallax.frag  parallax.vert  terrain.frag  terrain.vert  terrain2.frag
shaders/__01_redo_to_5/: frag.frag  light.frag  light.vert  material.frag  material.vert  vert.vert
shaders/__02_test_shader/: cube.vert  cube_asin.frag  cube_grayscale.frag  cube_sqrt.frag
shaders/engine/: basic.frag  depth.vert  depth_instanced.vert  engine.frag.glsl  engine.vert.glsl  model.frag  model.vert  model_diffuse.frag  model_diffuse.vert
shaders/hello_camera/: camera_vertex.glsl
shaders/hello_light/: light.vert  light_fragment.glsl
shaders/hello_terrain/: terrain.frag  terrain.vert
shaders/hello_transform/: vertex.glsl
shaders/hello_triangle/: fragment_shader.glsl
shaders/hello_triangle_web/: triangle.frag  triangle.vert
shaders/terrain/: terrain_vertex.glsl
src/: camera.cpp  engine.cpp  file_utility.cpp  geometry.cpp  graphics.cpp  input.cpp  json_utility.cpp  light.cpp  math_utility.cpp  mesh.cpp  model.cpp  scene.cpp  vector.cpp
terrain/: valley.tmd
tests/: hello_camera.cpp  hello_coords.cpp  hello_light.cpp  hello_terrain.cpp  hello_texture.cpp  hello_transform.cpp  hello_triangle.cpp  test_opengl.cpp
